--- a/music_lib.html
+++ b/music_lib.html
@@ -640,6 +640,22 @@
                                         </td>
                                     </tr>
                                     <tr>
+                                        <td style="width: 84px;height: 81px;"><img src="assets/img/Music/folder.jpg" style="width: 50px;"></td>
+                                        <td style="padding-bottom: 0px;width: 82px;height: 81.375px;"><button class="btn btn-primary border rounded-circle border-primary" type="button" style="margin-top: 11%;width: 38px;height: 38px;" onclick="ChangeTrack(&quot;Just Happy :)&quot;, &quot;Jazzy :)&quot;, &quot;Patrick&quot;, &quot;https://drive.google.com/uc?export=download&amp;id=1op1o2lh9FY1HFD1dQTj2qxYv-P9OguYf&quot;)"><i class="fa fa-play"></i></button></td>
+                                        <td style="width: 444px;height: 80.6875px;">
+                                            <p class="text-left" style="margin-top: 3.5%;">Jazzy :)</p>
+                                        </td>
+                                        <td style="height: 80.9062px;width: 166px;">
+                                            <p class="text-left" style="margin-top: 10.5%;">Patrick</p>
+                                        </td>
+                                        <td style="width: 245px;height: 80.9062px;">
+                                            <p class="text-left" style="margin-top: 6.75%;">Just Happy :)<br></p>
+                                        </td>
+                                        <td style="width: 89px;height: 80.9219;">
+                                            <p class="text-left" style="margin-top: 24.5%;">1:03</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td style="width: 84px;height: 81px;"><img src="assets/img/Music/the_weird_one.png" style="width: 50px;"></td>
                                         <td style="padding-bottom: 0px;height: 81.375px;width: 82px;"><button class="btn btn-primary border rounded-circle border-primary" type="button" style="margin-top: 11%;width: 38px;height: 38px;" onclick="ChangeTrack(&quot;The Weird One&quot;, &quot;Absolutely Weird&quot;, &quot;Patrick&quot;, &quot;https://drive.google.com/uc?export=download&amp;id=1ov5Xa568hpFfHkYMESpwqtaESA-_wZj0&quot;)"><i class="fa fa-play"></i></button></td>
                                         <td style="width: 444px;height: 80.6875px;">
