--- a/music_lib.html
+++ b/music_lib.html
@@ -23,8 +23,6 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
-    <link rel="stylesheet" href="assets/fonts/line-awesome.min.css">
-    <link rel="stylesheet" href="assets/fonts/material-icons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/Article-List.css">
     <link rel="stylesheet" href="assets/css/audio.css">
@@ -40,7 +38,6 @@
     <link rel="stylesheet" href="assets/css/darker.css">
     <link rel="stylesheet" href="assets/css/Footer-Dark.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
@@ -84,21 +81,16 @@
         <div class="container">
             <div>
                 <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1">Album</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2">Title</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-1">Album</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-2">Title</a></li>
                 </ul>
                 <div class="tab-content">
-                    <div class="tab-pane active" role="tabpanel" id="tab-1">
+                    <div class="tab-pane" role="tabpanel" id="tab-1">
                         <div>
                             <ul class="nav nav-tabs" role="tablist">
                                 <li class="nav-item" role="presentation" style="width: 33%;min-width: 200px;"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-4">
                                         <div class="d-flex justify-content-xl-start"><img class="img-fluid float-left d-xl-flex justify-content-xl-start align-items-xl-center" style="width: 100px;height: 100px;margin-right:5%" src="assets/img/Music/folder.jpg">
                                             <p class="float-left d-xl-flex justify-content-xl-start align-items-xl-center" style="height: 100px;margin-bottom: 0px;">Just Happy :)</p>
-                                        </div>
-                                    </a></li>
-                                <li class="nav-item" role="presentation" style="width: 33%;min-width: 200px;"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5">
-                                        <div class="d-flex justify-content-xl-start"><img class="img-fluid float-left d-xl-flex justify-content-xl-start align-items-xl-center" style="width: 100px;height: 100px;margin-right:5%" src="assets/img/Music/the_weird_one.png">
-                                            <p class="float-left d-xl-flex justify-content-xl-start align-items-xl-center" style="height: 100px;margin-bottom: 0px;">The Weird One</p>
                                         </div>
                                     </a></li>
                             </ul>
@@ -414,7 +406,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" role="tabpanel" id="tab-2">
+                    <div class="tab-pane active" role="tabpanel" id="tab-2">
                         <div class="text-light bg-dark d-inline-flex float-right">
                             <p style="margin-top: 5%;padding-right: 5%;">Search</p><input type="search" id="search-field" style="height: 50%;margin-top: 5%;margin-left: 5%;width: 200%;">
                         </div>
@@ -653,54 +645,6 @@
                                         </td>
                                         <td style="width: 89px;height: 80.9219;">
                                             <p class="text-left" style="margin-top: 24.5%;">1:03</p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 84px;height: 81px;"><img src="assets/img/Music/the_weird_one.png" style="width: 50px;"></td>
-                                        <td style="padding-bottom: 0px;height: 81.375px;width: 82px;"><button class="btn btn-primary border rounded-circle border-primary" type="button" style="margin-top: 11%;width: 38px;height: 38px;" onclick="ChangeTrack(&quot;The Weird One&quot;, &quot;Absolutely Weird&quot;, &quot;Patrick&quot;, &quot;https://drive.google.com/uc?export=download&amp;id=1ov5Xa568hpFfHkYMESpwqtaESA-_wZj0&quot;)"><i class="fa fa-play"></i></button></td>
-                                        <td style="width: 444px;height: 80.6875px;">
-                                            <p class="text-left" style="margin-top: 3.5%;">Absolutely Weird</p>
-                                        </td>
-                                        <td style="height: 80.9062px;width: 166px;">
-                                            <p class="text-left" style="margin-top: 10.5%;">Patrick</p>
-                                        </td>
-                                        <td style="width: 245px;height: 80.9062px;">
-                                            <p class="text-left" style="margin-top: 6.75%;">The Weird One</p>
-                                        </td>
-                                        <td style="width: 89px;height: 80.9219;">
-                                            <p class="text-left" style="margin-top: 24.5%;">1:54</p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 84px;height: 81px;"><img src="assets/img/Music/the_weird_one.png" style="width: 50px;"></td>
-                                        <td style="padding-bottom: 0px;width: 82px;height: 81.375px;"><button class="btn btn-primary border rounded-circle border-primary" type="button" style="margin-top: 11%;width: 38px;height: 38px;" onclick="ChangeTrack(&quot;The Weird One&quot;, &quot;Chilly Happiness&quot;, &quot;Patrick&quot;, &quot;https://drive.google.com/uc?export=download&amp;id=1PXUnjebX4akfXnz-Bnk1jJJnLGE_dbZD&quot;)"><i class="fa fa-play"></i></button></td>
-                                        <td style="width: 444px;height: 80.6875px;">
-                                            <p class="text-left" style="margin-top: 3.5%;">Chilly Happiness</p>
-                                        </td>
-                                        <td style="height: 80.9062px;width: 166px;">
-                                            <p class="text-left" style="margin-top: 10.5%;">Patrick</p>
-                                        </td>
-                                        <td style="width: 245px;height: 80.9062px;">
-                                            <p class="text-left" style="margin-top: 6.75%;">The Weird One<br></p>
-                                        </td>
-                                        <td style="width: 89px;height: 80.9219;">
-                                            <p class="text-left" style="margin-top: 24.5%;">5:35</p>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td style="width: 84px;height: 81px;"><img src="assets/img/Music/the_weird_one.png" style="width: 50px;"></td>
-                                        <td style="padding-bottom: 0px;width: 82px;height: 81.375px;"><button class="btn btn-primary border rounded-circle border-primary" type="button" style="margin-top: 11%;width: 38px;height: 38px;" onclick="ChangeTrack(&quot;The Weird One&quot;, &quot;Nonsense&quot;, &quot;Patrick&quot;, &quot;https://drive.google.com/uc?export=download&amp;id=1VltWNEfx31KviY4qd1oHxL94r-DU9nHi&quot;)"><i class="fa fa-play"></i></button></td>
-                                        <td style="width: 444px;height: 80.6875px;">
-                                            <p class="text-left" style="margin-top: 3.5%;">Nonsense</p>
-                                        </td>
-                                        <td style="height: 80.9062px;width: 166px;">
-                                            <p class="text-left" style="margin-top: 10.5%;">Patrick</p>
-                                        </td>
-                                        <td style="width: 245px;height: 80.9062px;">
-                                            <p class="text-left" style="margin-top: 6.75%;">The Weird One<br></p>
-                                        </td>
-                                        <td style="width: 89px;height: 80.9219;">
-                                            <p class="text-left" style="margin-top: 24.5%;">2:55</p>
                                         </td>
                                     </tr>
                                 </tbody>
